# AstronomyPythonLibrary

./: LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
API_draft/: README.md
docs/: milestone4.md  readme.md
docs/source/: conf.py  index.rst
src/classification/: __init__.py  classifier.py  demo.ipynb  nn.py
src/cross_match/: __init__.py  cross_match_gaia  cross_match_gaia.py
src/data_augmentation/: __init__.py  augmented_data.csv  data_augmentation.py  processed_data.csv
src/data_retrieval/: __init__.py  data_retrieval.py
src/preprocessing/: __init__.py  clean.py  demo.ipynb
src/visualization/: __init__.py  visualize.py
temp/: data.csv
tests/: test_classifier.py  test_cross_match.py  test_data_augmentation.py  test_data_retrieval.py  test_integration.py  test_preprocessing.py  test_visualization.py
tutorial/: README.md  demo.ipynb
